--- a/styles/shared/general.css
+++ b/styles/shared/general.css
@@ -1,16 +1,25 @@
-body {
-  font-family: Roboto, Arial;
-  color: rgb(33, 33, 33);
-  /* The <body> element has a default margin of 8px
-     on all sides. This removes the default margins. */
+* {
+  padding: 0;
   margin: 0;
+
 }
 
-/* <p> elements have a default margin on the top
-   and bottom. This removes the default margins. */
-p {
+body {
+  font-family:  Roboto, Arial;
   margin: 0;
+  padding-top: 60px;
+  padding-left: 76px;
+  padding-right: 4px;
+  background-color: rgb(248, 248, 248);
+  color: black;
 }
+
+p {
+  margin-top: 0;
+  margin-bottom: 0;
+}
+
+/* druga wersja */
 
 button {
   cursor: pointer;
