--- a/styles/shared/footer.css
+++ b/styles/shared/footer.css
@@ -1,6 +1,6 @@
 footer {
   text-align: center;
-  padding: 20px;
+  padding: 2px;
   background-color: rgba(255, 255, 255, 0.3);
   color: black;
   display: flex;
@@ -19,7 +19,7 @@ footer {
 
 footer .contact-links {
   width: 100%;
-  margin-top: 10px;
+  margin-top: 5px;
   /* justify-content: center; */
 }
 
@@ -28,7 +28,7 @@ footer .contact-links a {
   margin: 0 15px;
   text-decoration: none;
   display: inline-block;
-  font-size: 16px;
+  font-size: 14px;
   /* justify-self: center; */
 }
 
@@ -45,4 +45,5 @@ footer .contact-links a:hover {
 iframe {
   width: 100%;
   margin-top: 10px;
+  margin-bottom: 40px;
 }
