--- a/styles/shared/header.css
+++ b/styles/shared/header.css
@@ -18,12 +18,12 @@
     border-bottom-width: 1px;
     border-bottom-style: solid;
     border-bottom-color: rgb(228, 228, 228);
-    height: 55px;
+    height: 45px;
 
 }
 
 .left-section {
-    width: 103px;
+    width: 82px;
     margin-left: 0;
     /*
     display: flex;
@@ -31,34 +31,40 @@
 */
 }
 
+
+
 .header-link {
-    display: inline-block;
+    /* display: inline-block; */
     padding: 0px;
     border-radius: 2px;
     cursor: pointer;
     text-decoration: none;
     /* border: 1px solid rgba(0, 0, 0, 0.8); */
-    margin-left: 0;
+    margin: 0;
     color: black;
     text-align: center;
     width: 100%;
-
+    /* flex: 1; */
 }
 
-
-.hamburger-menu {
-    height: 24px;
-    margin-left: 24px;
-    margin-right: 24px;
+.header-title {
+    font-family: Roboto, Arial;
+    font-weight: 500;
+    font-size: 14px;
+    justify-content: center;
+    width: 100%;
+    text-align: center;
 }
+
 
 .thaiweed-logo {
     /* width: 130px; */
     /* margin-top: 5px; */
     background-color: rgba(0, 0, 0, 0);
     border-radius: 3px;
-    height: 58px;
+    height: 45px;
     margin-left: 0px;
+    margin-top: 0;
     
 }
 
@@ -73,105 +79,19 @@
   
     .thaiweed-mobile-logo {
       display: block;
-      height: 58px;
-      margin-top: 1px;
+      height: 45px;
+      margin-top: 0 px;
     }
   }
 
-
-
-
-
-
-
-
-
 .middle-section {
     flex: 1;
-    margin-left: 0px;
-    margin-right: 0px;
+    margin-left: 5px;
+    margin-right: 5px;
     /* max-width: 500px; */
-    display: flex;
+    /* display: flex; */
     align-items: center;
     text-align: center;
-}
-
-.search-bar {
-    flex: 1;
-    height: 36px;
-    padding-left: 10px;
-    font-size: 16px;
-    border: 1px solid rgb(192, 192, 192);
-    border-radius: 2px;
-    box-shadow: inset 1px 2px 3px rgba(0, 0, 0, 0.1);
-    width: 0;
-}
-
-.search-bar::placeholder {
-    /* font-family: Roboto, Arial; */
-    font-size: 16px;
-}
-
-.search-button {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    height: 40px;
-    width: 66px;
-    background-color: rgb(240, 240, 240);
-    border: 1px solid rgb(192, 192, 192);
-    margin-left: -1px;
-    margin-right: 10px;
-    position: relative;
-}
-
-.search-button .tooltip,
-.voice-search-button .tooltip,
-.upload-icon-container .tooltip,
-.youtube-apps-icon-container .tooltip,
-.notifications-icon-container .tooltip {
-    position: absolute;
-    background-color: gray;
-    color: white;
-    padding-top: 4px;
-    padding-bottom: 4px;
-    padding-left: 8px;
-    padding-right: 8px;
-    border-radius: 2px;
-    font-size: 12px;
-    bottom: -30px;
-    opacity: 0;
-    transition: 0.15s;
-    pointer-events: none;
-    white-space: nowrap;
-}
-
-.search-button:hover .tooltip,
-.voice-search-button:hover .tooltip,
-.upload-icon-container:hover .tooltip,
-.youtube-apps-icon-container:hover .tooltip,
-.notifications-icon-container:hover .tooltip {
-    opacity: 1;
-}
-
-.search-icon {
-    height: 25px;
-}
-
-.voice-search-button {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    height: 40px;
-    width: 40px;
-    border-radius: 20px;
-    border: none;
-    background-color: rgb(245, 245, 245);
-    position: relative;
-}
-
-.voice-search-icon {
-    height: 24px;
 }
 
 .right-section {
@@ -186,21 +106,6 @@
 
 }
 
-.orders-link {
-    color: black;
-}
-
-.returns-text {
-    display: block;
-    font-size: 13px;
-}
-
-.orders-text {
-    display: block;
-    font-size: 15px;
-    font-weight: 700px;
-}
-
 .cart-link {
     color: black;
     display: flex;
@@ -209,21 +114,9 @@
 }
 
 .cart-icon {
-    width: 50px;
+    height: 40px;
+    /* width: 40px; */
     /* align-items: start; */
-}
-
-.upload-icon {
-    height: 24px;
-}
-
-.youtube-apps-icon {
-    height: 24px;
-}
-
-.current-user-picture {
-    height: 32px;
-    border-radius: 16px;
 }
 
 .cart-text {
@@ -234,11 +127,11 @@
 
 .cart-quantity {
     color: black;
-    font-size: 15px;
+    font-size: 13px;
     font-weight: 700;
     position: absolute;
-    top: 12px;
-    left: 14px;
+    top: 9px;
+    left: 9px;
     width: 26px;
     text-align: center;
     padding: 0px;
@@ -246,11 +139,3 @@
     background-color: rgba(255, 255, 255, 0.3);
 }
 
-.header-title {
-    font-family: Roboto, Arial;
-    font-weight: 500;
-    font-size: 15px;
-    justify-content: center;
-    width: 100%;
-    text-align: center;
-}
