--- a/styles/pages/checkout/checkout.css
+++ b/styles/pages/checkout/checkout.css
@@ -1,9 +1,9 @@
 .main {
   max-width: 1100px;
-  padding-left: 30px;
-  padding-right: 30px;
+  padding-left: 10px;
+  padding-right: 10px;
 
-  margin-top: 140px;
+  margin-top: 100px;
   margin-bottom: 100px;
 
   /* margin-left: auto;
@@ -208,4 +208,8 @@
 
   margin-top: 11px;
   margin-bottom: 15px;
+}
+body {
+  padding-left: 10px;
+  padding-top: 10px;
 }
