--- a/styles/pages/index.css
+++ b/styles/pages/index.css
@@ -7,16 +7,15 @@
 }
 
 .product-name {
-  height: 50px;
+  /* height: 30px; */
   margin-bottom: 5px;
-}
-
-.video-title {
-  margin-top: 0;
   font-size: 14px;
   font-weight: 500;
-  line-height: 20px;
-  margin-bottom: 10px;
+}
+
+.product-type {
+  font-size: 13px;
+  margin-bottom: 5px;
 }
 
 .video-info-grid {
@@ -37,18 +36,22 @@
 .video-author {
   font-size: 12px;
   color: rgb(96, 96, 96);
-  margin-bottom: 4px;
+  margin-bottom: 5px;
 }
 
-.video-stats {
+.add-date {
   font-size: 12px;
   color: rgb(96, 96, 96);
+  margin-bottom: 5px;
+
 }
+
+
 
 .video-grid {
   display: grid;
   grid-template-columns: 1fr 1fr 1fr;
-  column-gap: 6px;
+  column-gap: 5px;
   row-gap: 10px;
 }
 
@@ -84,7 +87,8 @@
 
 .product-price {
   font-weight: 700;
-  margin-bottom: 10px;
+  margin-bottom: 5px;
+  /* text-align: center; */
 }
 
 .product-quantity-container {
@@ -107,6 +111,11 @@
      be invisible. Use JavaScript to change the
      opacity and make it visible. */
   opacity: 0;
+  transition: opacity 0.5s ease;
+}
+
+.visible {
+  opacity: 1;
 }
 
 .added-to-cart img {
